@@ -1,0 +1,6 @@
+#ifndef __QUICKSORT_DISK_H__
+#define __QUICKSORT_DISK_H__
+
+void quicksort_disk(char *mpit);
+
+#endif /* __QUICKSORT_DISK_H__ */
